# readme-summarizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW_SETUP.md  HOW_TO_PUBLISH.md  LICENSE  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  README.zh-CN.md  RELEASE.md  USAGE_EXAMPLES.md  test_config.sh  test_full_workflow.sh
.github/workflows/: release.yml
homebrew/: readme-summarizer.rb
scripts/: build-release.sh  prepare-release.sh
src/: config.rs  error.rs  generator.rs  main.rs  parser.rs  scanner.rs
